# MolSAIC

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/examples/: index.md
examples/advanced/: checkpoint_example.py  pipeline_example.py  workflow_templates.py
examples/legacy/: file_vs_object_approach.py
examples/tutorials/: basic_usage.py
research/benchmarks/profiles/: profile_3nec.py
research/examples/advanced/: checkpoint_example.py
research/examples/legacy/: file_vs_object_approach.py
research/examples/tutorials/: basic_usage.py
resources/: README.md
resources/architecture/: design.md  index.md  overview.md
resources/benchmarks/: performance_comparison.py
resources/docs/: index.md
resources/docs/api/: index.md
resources/docs/examples/: index.md
resources/docs/usage/: quick_start.md
resources/examples/: README.md
resources/examples/docs/: index.md
resources/tests/: __init__.py  run_integration_tests.sh  run_tests.py
resources/usage/: quick_start.md
src/: cli.py  config.py  pipeline.py  workspace.py
src/cli/: MIGRATION.md  README.md  __init__.py  base.py
src/external_tools/: README.md  __init__.py  base.py  config.py  msi2namd.py  packmol.py  packmol_cli.py  utils.py  workspace.py
src/models/: system.py
src/parsers/: car_parser.py  integration.py  mdf_parser.py  pdb_parser.py
src/templates/: workflows.py
src/utils/: __init__.py
tasks/: completed_tasks.md  file_formats.md  tasks.md
tests/: run_tests.py
(+41 files in other folders)
