[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py37"
select = ["E", "F", "W", "I"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py37"]
